Updating 2x (#58)
Signed-off-by: jzonthemtn <jeff.zemerick@mtnfog.com>
Signed-off-by: Scott Stults <sstults@opensourceconnections.com>
Signed-off-by: Mark Cohen <markcoh@amazon.com>
Signed-off-by: JohannesDaniel <johannesdaniel.peter@gmx.de>
Signed-off-by: Jason Hinch <jhinch@atlassian.com>
Co-authored-by: Jeff Zemerick <13176962+jzonthemtn@users.noreply.github.com>
Co-authored-by: Mark Cohen <markcoh@amazon.com>
Co-authored-by: Johannes Peter <johannesdaniel.peter@gmx.de>
Co-authored-by: Jason Hinch <46059987+jhinch-at-atlassian-com@users.noreply.github.com>